data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4071.wast
;; 10. **Test Unreachable Execution on Invalid Function Reference**:     - **Description**: Execute call_indirect with an index that references an invalid or nonexistent function in the function table.     - **Constraint Checked**: Validate handling and trapping for invalid function references.     - **Relation to Unreachable**: Validate that an invalid function reference does not result in incorrect control flow leading to an 'unreachable'.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $invalid_func)
    (func (param i32) (result i32)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "unknown function"
)